<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".CreateNewAccountFragment">


    <EditText
        android:id="@+id/createFragmentFirstNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createFragmentLastNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createFragmentFirstNameId" />


    <EditText
        android:id="@+id/createFragmentEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createFragmentLastNameId" />

    <EditText
        android:id="@+id/createFragmentPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createFragmentEmailId" />


    <Button
        android:id="@+id/registerButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createFragmentPasswordId" />

    <Button
        android:id="@+id/cancelButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/registerButtonId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registerButtonId"
        app:layout_constraintTop_toBottomOf="@+id/createFragmentPasswordId" />


</androidx.constraintlayout.widget.ConstraintLayout>